--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="upes_logo.png" alt="logo"></a>
+                                <a href="btech_admission.html" title=""><img src="upes_logo.png" alt="logo"></a>
                             </div>
                             <div class="name">
-                                <a href="index.html" title="">
+                                <a href="btech_admission.html" title="">
                                     <h5>University of Petroleum and Energy Studies</h5>
                                     <h5 class="primary-color">Dehradun</h5>
                                 </a>
